# nemulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
debugging/: 6502debugger.cpp  6502debugger.h
include/bus/: bus.h
include/devices/: device.h
include/devices/cartridges/: cartridge.h
include/devices/cpu/: 6502.h
include/devices/memories/: memory.h  ppu_nametable_ram.h  ppu_palette_ram.h  ram.h
include/devices/ppu/: oam.h  ppu.h
include/forwards/: classes.h
include/misc/: macros.h
src/bus/: bus.cpp
src/devices/: device.cpp
src/devices/cartridges/: cartridge.cpp  read_ines.cpp
src/devices/cpu/6502/: 6502.cpp  6502_addressing_modes.cpp  6502_instructions.cpp
src/devices/memories/: memory.cpp  ppu_nametable_ram.cpp  ppu_palette_ram.cpp  ram.cpp
src/devices/ppu/: oam.cpp  ppu.cpp
testing/devices/cartridges/: cartridge.cpp
testing/devices/cartridges/roms/ines/: character_content_ending.ines  corrupted_header_beginning.ines  corrupted_header_ending.ines  ines_two.ines  mirroring_four_screen.ines  mirroring_horizontal.ines  mirroring_vertical.ines  trainer_content.ines  unsupported_mapper.ines
testing/devices/cpu/6502/addressing_modes/: addressing_modes.cpp
testing/devices/cpu/6502/instructions/: arithmetic.cpp  branch.cpp  increments_decrements.cpp  jump.cpp  load_store.cpp  logical.cpp  shifts.cpp  stack.cpp  status.cpp  system.cpp  transfer.cpp
